--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -77,7 +77,7 @@
             text-align: center;
             font-size: 16px;
             margin-top: 20px;
-            color: #007bff; /* Синий цвет ссылки */
+            color: #007bff;
         }
     </style>
 </head>
